Fix sizing of dates on mobile. (#25)

--- a/assets/static/_css/pycascades/pycascades.home.css
+++ b/assets/static/_css/pycascades/pycascades.home.css
@@ -199,7 +199,13 @@ section#intro {
 }
 
 body.home #intro .dates {
-    font-size: 2em;
+    font-size: 4vw;
     font-weight: 900;
     text-align: center;
+}
+
+@media (min-width: 1200px) {
+    body.home #intro .dates {
+        font-size: 2.2em;
+    }
 }
